--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "cinghie/yii2-traits",
+    "name": "BlackCat636/yii2-traits",
     "description": "Yii2 Traits",
     "keywords": [
         "yii2 traits", 
